# student-system

./: .gitignore  DEPLOYMENT.md  DEPLOY_TO_RENDER.md  Dockerfile.txt  README.md  docker-compose.yml  render.yaml
backend/: .env  Dockerfile  init_db.py  logging_config.py  main.py  pyproject.toml  requirements.txt  run.py  student_system.db  test_api.py  test_mysql.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
frontend/: .env  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: icons.css  main.css
frontend/src/router/: index.js
frontend/src/store/: student.js
frontend/src/views/: AboutView.vue  HomeView.vue  NotFoundView.vue  StudentCreateView.vue  StudentEditView.vue  StudentListView.vue
